test/compile-fail/resolution/pub/in-too-many-supers/expected.txt
error: there are too many leading `super` keywords
  ┌─ ./test/compile-fail/resolution/pub/in-too-many-supers/top.rhdl:2:19
  │
2 │     pub(in super::super) struct b {}
  │                   ^^^^^ goes beyond the crate root
  │
  = try removing that `super` from the path

